Make the rest of the page avoid the jumpbox area

--- a/public/stylesheets/jumpbox.css
+++ b/public/stylesheets/jumpbox.css
@@ -1,3 +1,7 @@
+body {
+    margin-right: 26em;
+}
+
 .jumpbox {
     width: 25em;
     float: right;
